test/should-pass/pass/make-klass-with-no-info/exe.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t k = make(klass::klass);
  USE(k);
  return 0;
}
