test/should-fail/exception/exe.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass exception;

int-t main()
{
  throw make(exception::klass, message : "oops");
  return 0;
}
